fixed pmt high priority hints